--- a/index.html
+++ b/index.html
@@ -1,21 +1,67 @@
-<html>
-  <head>
-    <title>Engineer Khazam</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!--navigation bar-->
-    <span class="navigation">
-      <ul>
-        <li><a class="active" href="#index">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
-      </ul>
-    </span>
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="dark">
+  <html>
+    <head>
+      <title>Engineer Khazam</title>
+      <style>
+        * {
+          --bs-primary-rgb: 0, 79, 170;
+        }
+      </style>
+      <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+        crossorigin="anonymous"
+      />
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/i18next/23.7.16/i18next.min.js"
+        integrity="sha512-E1pnJhrNPWsYPysgqA2Tz2lFS9kF7uiL8iET9wAT4AbYJX5KcejCu58j0TIT7kiEl56YUMYHwtJB39mNzbeVFw=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
+      <script
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"
+      ></script>
 
-    <div><p>hello</p></div>
-    <div><p>hello</p></div>
-    <div><p>hello</p></div>
-  </body>
+      <script src="resources/lang/multilanguages.js"></script>
+    </head>
+    <body>
+      <div class="m-5">
+        <nav class="navbar fixed-bottom bg-primary primary">
+          <div class="container">
+            <!-- more navigation code here -->
+            <a href="#index" class="active">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+          </div>
+        </nav>
+        <div><p>1 hello</p></div>
+        <div><p>2 hello</p></div>
+        <div><p>3 hello</p></div>
+
+        <div>
+          <span data-i18n="Wlcome"></span>
+          <!-- Example element -->
+          <select id="languageSwitcher">
+            <option value="en">English</option>
+            <option value="ar">Arabic</option>
+          </select>
+        </div>
+      </div>
+    </body>
+  </html>
 </html>
