updated language files

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div><p>3 hello</p></div>
 
         <div>
-          <span data-i18n="Wlcome"></span>
+          <span data-i18n="Welcome"></span>
           <!-- Example element -->
           <select id="languageSwitcher">
             <option value="en">English</option>
