--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <div><p>3 hello</p></div>
 
         <div>
-          <span data-i18n="Welcome"></span>
-          <!-- Example element -->
+          <span data-i18n="welcome"></span>
+
           <select id="languageSwitcher">
             <option value="en">English</option>
             <option value="ar">Arabic</option>
