--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
   <html>
     <head>
       <title>Engineer Khazam</title>
-      <style>
-        * {
-          --bs-primary-rgb: 0, 79, 170;
-        }
-      </style>
       <link
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -36,15 +31,13 @@
         crossorigin="anonymous"
       ></script>
 
+      <link rel="stylesheet" href="css/styles.css" />
       <script src="resources/lang/multilanguages.js"></script>
-      <script src="partials/navbar.html"></script>
+      <script src="js/navbar.js"></script>
     </head>
     <body>
       <div class="m-5">
-        <div><p>1 hello</p></div>
-        <div><p>2 hello</p></div>
-        <div><p>3 hello</p></div>
-
+        <div id="navbar-placeholder"></div>
         <div>
           <span data-i18n="welcome"></span>
         </div>
