--- a/html/fun.html
+++ b/html/fun.html
@@ -8,7 +8,7 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
         crossorigin="anonymous"
       ></script>
-      <script src="/js/includes.js"></script>
+      <script src="/website/js/includes.js"></script>
     </head>
     <body>
       <div class="m-5">
