--- a/html/academic.html
+++ b/html/academic.html
@@ -14,13 +14,13 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
         crossorigin="anonymous"
       ></script>
-      <script src="/js/includes.js"></script>
+      <script src="/website/website/js/includes.js"></script>
     </head>
     <body>
       <div class="m-2 my-5">
         <nav class="navbar fixed-bottom bg-primary primary" id="navbar">
           <div class="container xl">
-            <a class="nav-item text-white" href="/index.html">
+            <a class="nav-item text-white" href="/website/index.html">
               <i class="fa-solid fa-house" id="nav-bar-home"></i>
             </a>
             <a class="nav-item text-white" href="/website/html/educational.html">
