--- a/html/academic.html
+++ b/html/academic.html
@@ -14,7 +14,7 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
         crossorigin="anonymous"
       ></script>
-      <script src="/website/website/js/includes.js"></script>
+      <script src="/website/js/includes.js"></script>
     </head>
     <body>
       <div class="m-2 my-5">
