--- a/html/educational.html
+++ b/html/educational.html
@@ -10,6 +10,33 @@
         crossorigin="anonymous"
       ></script>
       <script src="/website/js/includes.js"></script>
+
+      <style>
+        .gallery {
+          display: grid;
+          grid-template-columns: repeat(
+            auto-fill,
+            minmax(20%, 1fr)
+          ); /* Creates a responsive grid */
+          gap: 3rem; /* Space between items */
+          padding: 3rem;
+        }
+
+        .gallery a {
+          display: block;
+          overflow: hidden;
+        }
+
+        .gallery img {
+          width: 100%;
+          height: auto;
+          transition: transform 0.5s ease;
+        }
+
+        .gallery img:hover {
+          transform: scale(1.1); /* Zoom effect on hover */
+        }
+      </style>
     </head>
     <body>
       <div class="m-2">
@@ -18,7 +45,10 @@
             <a class="nav-item text-white" href="/website/index.html">
               <i class="fa-solid fa-house" id="nav-bar-home"></i>
             </a>
-            <a class="nav-item text-white" href="/website/html/educational.html">
+            <a
+              class="nav-item text-white"
+              href="/website/html/educational.html"
+            >
               <i
                 class="fa-solid fa-chalkboard-user"
                 id="nav-bar-educational"
@@ -42,10 +72,16 @@
           </div>
         </nav>
 
-        
         <div class="p-5">
           <h1 class="text-center">المفروض الصفحة تحتوي على أشياء تعليميَّة</h1>
           <h3 class="text-center p-5">قريباً إن شاء الله</h3>
+        </div>
+
+        <div class="gallery">
+          <a href="/website/p5js/projectiles/index.html" target="">
+            <img src="/content/images/projectile.png" />
+          </a>
+          <!-- Add more simulations as needed -->
         </div>
       </div>
       <script>
