Golf Game added to the fun page

--- a/html/fun.html
+++ b/html/fun.html
@@ -47,6 +47,15 @@
         </div>
       </div>
 
+      
+      <div class="gallery">
+        <a href="/website/p5js/golfGame/index.html" target="">
+          <img src="/website/content/images/golfGame.png" />
+          <span>المقذوفات</span>
+        </a>
+      </div>
+    </div>
+
       <script>
         $(document).ready(function () {
           $("#nav-bar-fun").addClass("inverted");
