edited golf game name and uploaded its image

--- a/html/fun.html
+++ b/html/fun.html
@@ -51,7 +51,7 @@
       <div class="gallery">
         <a href="/website/p5js/golfGame/index.html" target="">
           <img src="/website/content/images/golfGame.png" />
-          <span>المقذوفات</span>
+          <span>لعبة جولف</span>
         </a>
       </div>
     </div>
