--- a/html/educational.html
+++ b/html/educational.html
@@ -90,8 +90,7 @@
         </nav>
 
         <div class="p-5">
-          <h1 class="text-center">المفروض الصفحة تحتوي على أشياء تعليميَّة</h1>
-          <h3 class="text-center p-5">قريباً إن شاء الله</h3>
+          <h1 class="text-center">تجارب و برامج تعليميَّة</h1>
         </div>
 
         <div class="gallery">
@@ -102,6 +101,10 @@
           <a href="/website/p5js/electroStatic/index.html" target="">
             <img src="/website/content/images/electroStatic.png" />
             <span>الكهرباء السَّاكنة</span>
+          </a>
+          <a href="/website/p5js/goelogySimulation/index.html" target="">
+            <img src="/website/content/images/geologySimulator.png" />
+            <span>الحركة الأرضيَّة الرَّافعة و الهابطة</span>
           </a>
         </div>
       </div>
