--- a/html/about.html
+++ b/html/about.html
@@ -49,7 +49,7 @@
           <br />
           <div>
             <h4 class="text-justify">
-              بدأ بالرياضيَّات و تفرَّعت إلى غيرها:
+              بدأتُ بالرياضيَّات و تفرَّعت إلى غيرها:
               <div class="p-4">
                 <h5 class="bg-secondary p-2">رياضيَّات</h5>
                 <div class="px-4">
