employee simulator uploaded

--- a/html/educational.html
+++ b/html/educational.html
@@ -106,6 +106,10 @@
             <img src="/website/content/images/geologySimulator.png" />
             <span>الحركة الأرضيَّة الرَّافعة و الهابطة</span>
           </a>
+          <a href="/website/p5js/employeeSimulator/index.html" target="">
+            <img src="/website/content/images/employeeSimulator.png" />
+            <span>إجهاد الموظفين</span>
+          </a>
         </div>
       </div>
       <script>
