Bouyancy Force Simulation

--- a/html/educational.html
+++ b/html/educational.html
@@ -110,6 +110,10 @@
             <img src="/website/content/images/employeeSimulator.png" />
             <span>إجهاد الموظفين</span>
           </a>
+          <a href="/website/p5js/bouyancyForce/index.html" target="">
+            <img src="/website/content/images/bouyancyForce.png" />
+            <span>الطفو و مبدأ آرخميدس</span>
+          </a>
         </div>
       </div>
       <script>
